<resources>
    <string name="app_name">MAD_T5</string>
    <string name="tv_userName">User Name</string>
    <string name="tv_password">Password</string>
    <string name="et_userName" />
    <string name="et_password" />
    <string name="btn_selectAll">Select All</string>
    <string name="btn_add">Add</string>
    <string name="btn_signIn">Sign In</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
</resources>